<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/toolsFragment"
        android:icon="@drawable/ic_nav_tools"
        android:title="@string/nav_tools"/>
    <item
        android:id="@+id/fab_placeholder"
        android:icon="@drawable/ic_add"
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings"/>
</menu>
